--- a/src/components/VideoBackground.css
+++ b/src/components/VideoBackground.css
@@ -1,18 +1,15 @@
-/* VideoBackground.css */
-
 .video-background {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
+  z-index: -1; /* Set z-index to be below other elements */
 }
 
-video {
+.video-background video {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1; /* Place the video behind other content */
 }
