--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -4,13 +4,19 @@ body {
   font-family: "Arial", sans-serif;
   background-color: #f8f9fa;
 }
+.Navigation {
+  background-color: #333; /* Customize the background color */
+  color: #fff; /* Customize the text color */
+  padding: 20px; /* Customize the padding */
+}
 
 .display-3 {
   color: #007bff;
 }
 
 .lead {
-  color: #6c757d;
+  color: #e1e9ee;
+  font-size: large;
 }
 
 img.img-fluid {
@@ -19,19 +25,19 @@ img.img-fluid {
 }
 
 .bg-dark {
-  background-color: #343a40;
+  background-color: #0575e5;
 }
 
 .text-white {
-  color: #fff;
+  color: rgb(85, 3, 207);
 }
 
 h3 {
-  color: #007bff;
+  color: #ebeef1;
 }
 
 .text-center2 {
-  color: #6c757d;
+  color: #e5e8ec;
 }
 
 /* Add any additional styles as needed */
