--- a/src/pages/Homepage/css/index.css
+++ b/src/pages/Homepage/css/index.css
@@ -25,7 +25,7 @@
   width: 100%;
   height: 60px;
   display: block;
-  background-color: #846ff7;
+  background-color: #8f7ef1;
 }
 
 .navigation{
@@ -42,9 +42,8 @@
     display: table;
     padding: 0 10px;
     vertical-align: center;
-
 }
-
+/*herosection*/
 .container{
  width: 100%;
  height: 90vh;
@@ -56,17 +55,6 @@
  position: relative;
 }
 
-.butt{
-    width: 20%;
-    /* background-color: rgb(104, 85, 156); */
-    background-color:white;
-    height: 40px;
-    color:    #846ff7 ;
-    font-size: 1.1rem;
-    border-color:#846ff7 ;
-    font-family: 
-    'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-}
 
 
  .contents h1{
@@ -82,9 +70,32 @@
    text-align: left;
    line-height: 30px;
 }
+.butt{
+    width: 25%;
+    background-color:white;
+    height: 40px;
+    color:    #846ff7 ;
+    font-size: 1.1rem;
+    border-color:#846ff7 ;
+    margin: 5px;
+    font-family: 
+    'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+   
+}
+.buttt{
+    border: none;
+    background-color:#846ff7;
+    color: white;
+    margin: 5px;
+    width: 25%;
+    height: 40px;
+    font-size: 1.1rem;
+    font-weight: 600px;
+}
+
 
 .cont-img{
-    width: 600px;
+    width: 650px;
     height: 500px;
     
 
@@ -93,8 +104,82 @@
     width: 100%;
     height: 100%;
     margin-right: 10%;
-
-
 }
 
+/*login page*/
+
+.log{
+    width: 100%;
+    height: 100vh;
+     background-color:white; 
+    padding: 0 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.password-pic{
+    width: 600px;
+    height: 500px;
+    
+}
+.password-pic img{
+    width: 100%;
+    height: 100%;
+    margin-right: 10px;
+}
+
+
+
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+   
+  }
+  
+  .login-form {
+    background-color: #ffffff;
+    padding: 20px;
+   justify-content: center;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(94, 94, 94, 0.6);
+    width: 300px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
+  }
+  
+  .login-form h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  .login-form label {
+    display: block;
+    margin-bottom: 8px;
+
+  }
+  
+  .login-form input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 12px;
+    box-sizing: border-box;
+  }
+  
+  .login-form button {
+    background-color: #846ff7;
+    color: #ffffff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+  }
+  
  
+
+
