--- a/react-app/src/Components/login.css
+++ b/react-app/src/Components/login.css
@@ -1,79 +1,97 @@
-/* Login.css */
-
-body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #f4f4f4;
-}
-
-.login-container {
-  background-color: #fff;
-  padding: 40px;
-  border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 400px;
-}
-
-form {
+.container{
   display: flex;
   flex-direction: column;
+  margin-top: 200px;
+  background: #fff;
+  width: 600px;
+  padding-bottom: 30px;
+}
+.header{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 9px;
+  width: 100%;
+  margin-top: 30px;
 }
 
-.input-group {
-  margin-bottom: 20px;
+.text{
+  color: #3c009d;
+  font-size: 48px;
+  font-weight: 700;
 }
 
-label {
-  margin-bottom: 8px;
-  font-weight: bold;
+.underline{
+  width: 61px;
+  height: 6px;
+  background: #3c009d;
+  border-radius: 9px;
 }
 
-input {
-  padding: 10px;
-  margin-top: 8px;
-  margin-bottom: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.button-group {
+.inputs{
+  margin-top:55px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 25px;
 }
 
-button {
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
+.input{
+  display: flex;
+  align-items: center;
+  margin: auto;
+  width: 480px;
+  height: 80px;
+  background: #eaeaea;
+  border-radius: 6px;
+}
+
+.input img{
+  margin: 0 30px;
+}
+
+.input input{
+  height:50px;
+  width: 400px;
+  background: transparent;
   border: none;
-  border-radius: 4px;
+  outline: none;
+  color: #797979;
+  font-size: 19px;
+}
+
+.forgot-password{
+  padding-left: 62px;
+  margin-top: 27px;
+  color: #797979;
+  font-size: 18px;
+}
+
+.forgot-password span{
+  color: #4c00b4;
   cursor: pointer;
 }
 
-button:hover {
-  background-color: #0056b3;
+.submit-container{
+  display: flex;
+  gap: 30px;
+  margin: 30px auto;
 }
 
-.password-input,
-.student-id-input {
-  position: relative;
-}
-
-.eye-icon {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
+.submit{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  height: 59px;
+  color: #fff;
+  background: #4c00b4;
+  border-radius: 50px;
+  font-size: 19px;
+  font-weight: 700;
   cursor: pointer;
-  color: #aaa;
 }
 
-.eye-icon:hover {
-  color: #333;
+.gray{
+  background: #eaeaea;
+  color: #676767;
 }
-
