--- a/gradereport/src/App.css
+++ b/gradereport/src/App.css
@@ -1,5 +1,5 @@
 header{
-  position: relative;
+  position: fixed;
   top: 0;
   right: 10x;
   width: 100%;
@@ -14,7 +14,7 @@ header{
       color: black;
   }
 
-  .navigation a {
+  .navigation .dash {
       position: relative;
       font-size: 1.1em;
       color: black;
@@ -23,7 +23,7 @@ header{
       margin-left: 100px;
   }
   
-  .navigation a::after {
+  .navigation .dash::after {
       content: '';
       position: absolute;
       left: 0;
@@ -36,7 +36,7 @@ header{
       transform: scaleX(0);
       transition: transform .5s;
   }
-  .navigation a:hover::after {
+  .navigation .dash:hover::after {
       transform-origin: left;
       transform: scaleX(1);
   }
