Added Instuctors , help & support page and some images

--- a/assignment_websiwte/src/Dashboard.css
+++ b/assignment_websiwte/src/Dashboard.css
@@ -44,7 +44,7 @@
 }
 
 .dashboard_card_container{
-    background-color: rgb(236, 240, 243);
+    
     width: 900px;
     margin-left: 80px;
     height: 600px;
@@ -57,5 +57,28 @@
 }
 
 .dashboard_card{
-    border: 2px solid black;
+    border: 1px solid black;
+    text-align: center;
+    background-color: #dfebf0;
+}
+
+.title{
+    border: 0.3px solid black;
+    font-size: 32px;
+    color: rgb(116, 85, 7);
+}
+
+.sub{
+    font-size: 24px;
+    color: rgb(12, 104, 104);
+    margin: 40px;
+}
+
+#profs{
+    width: 100%;
+}
+h2{
+    text-align: center;
+    color: rgb(236, 199, 172);
+    margin: 10px;
 }
