--- a/assignment_websiwte/src/Login_page.css
+++ b/assignment_websiwte/src/Login_page.css
@@ -11,7 +11,8 @@ body{
 .form_background{
     width: 1366px;
     height: 679px;
-    background-color: #5b5a5a;
+    opacity: 0.7;
+    
 }
 
 .form_container{
@@ -23,7 +24,7 @@ body{
     box-shadow: #202020;
 }
 
-input{
+.input{
     width: 90%;
     background-color: #202020;
     color: white;
@@ -45,7 +46,7 @@ input{
 }
 .sign_in:hover{
     opacity: 0.5;
-    color: aliceblue;
+    color: rgb(238, 240, 242);
 }
 
 ::placeholder{
