--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -7,6 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
   background: linear-gradient(blue,gray);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  text-decoration: none;
 }
 
 code {
