Added student details

--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -1,6 +1,6 @@
 .d-container {
   position: relative;
-  top: -350px;
+  top: -10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,8 +8,25 @@
   width: 100%;
   height: 800px;
 }
+.student-info {
+  color: white;
+  padding-left: 20px;
+  margin-top: 100px;
+  width: 500px;
+  height: 200px;
+  background-color: rgb(30, 104, 188);
+  border-radius: 5px;
+}
+span {
+  font-weight: bold;
+  text-decoration: underline;
+}
+p {
+  font-size: 17px;
+}
+
 .d-grades {
-  margin-top: 380px;
+  margin-top: 260px;
   position: absolute;
   top: 120px;
   width: 650px;
@@ -36,5 +53,8 @@ th {
 .sem {
   margin-left: 17px;
   margin-bottom: -10px;
-  color: rgb(63, 60, 60);
+}
+
+.my-text {
+  font-size: 145px;
 }
