Added the grade report page and missing grade form page

--- a/assignment_websiwte/src/Dashboard.css
+++ b/assignment_websiwte/src/Dashboard.css
@@ -59,7 +59,7 @@
 .dashboard_card{
     border: 1px solid black;
     text-align: center;
-    background-color: #dfebf0;
+    background-color: rgb(251, 245, 245)
 }
 
 .title{
@@ -72,6 +72,7 @@
     font-size: 24px;
     color: rgb(12, 104, 104);
     margin: 40px;
+    
 }
 
 #profs{
