--- a/assignment_websiwte/src/HelpSupport.css
+++ b/assignment_websiwte/src/HelpSupport.css
@@ -35,3 +35,9 @@
     background-color: rgb(245, 240, 240);
     display: flex;
 }
+
+.faqs_item:hover{
+    cursor: pointer;
+    opacity: 0.7;
+
+}
