--- a/fga/src/Styles/PageStyles/Login.css
+++ b/fga/src/Styles/PageStyles/Login.css
@@ -1,9 +1,21 @@
+.body{
+    display: flex;
+    align-self: center;
+    
+}
+
+
 .login-box {
-    border-radius: 128px;
+    border-radius: 15px;
     border-color: #479AEC;
-    border-style: inset ridge outset ridge;
     background-color: #AFD7F4;
+    width: 300px;
+    height: 300px;
+
+    /**
+    border-style: inset ridge outset ridge;
     margin: auto;
+    */
 
 }
 
