--- a/frontend-grading-assignment/src/routes/CustomLogin.css
+++ b/frontend-grading-assignment/src/routes/CustomLogin.css
@@ -6,23 +6,15 @@ body {
     background-repeat: no-repeat;
 }
 
-/* .bg-primary {
-    background: #000 !important;
-} */
-
-.login-container {
-    margin-top: 10rem !important;
-}
-
 
 .card0 {
     box-shadow: 0px 4px 8px 0px #757575;
     border-radius: 0px;
 }
 
-.card2 {
+/* .card2 {
     margin: 0px 40px;
-}
+} */
 
 .profile img{
     width: 50%;
@@ -38,86 +30,6 @@ body {
     border-right: 2px solid #EEEEEE;
 }
 
-/*
-
-
-.line {
-    height: 1px;
-    width: 45%;
-    background-color: #E0E0E0;
-    margin-top: 10px;
-}
-
-.or {
-    width: 10%;
-    font-weight: bold;
-}
-
-.text-sm {
-    font-size: 14px !important;
-}
-
-::placeholder {
-    color: #BDBDBD;
-    opacity: 1;
-    font-weight: 300
-}
-
-:-ms-input-placeholder {
-    color: #BDBDBD;
-    font-weight: 300
-}
-
-::-ms-input-placeholder {
-    color: #BDBDBD;
-    font-weight: 300
-}
-
-input, textarea {
-    padding: 10px 12px 10px 12px;
-    border: 1px solid lightgrey;
-    border-radius: 2px;
-    margin-bottom: 5px;
-    margin-top: 2px;
-    width: 100%;
-    box-sizing: border-box;
-    color: #2C3E50;
-    font-size: 14px;
-    letter-spacing: 1px;
-}
-
-input:focus, textarea:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    border: 1px solid #304FFE;
-    outline-width: 0;
-}
-
-button:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    outline-width: 0;
-}
-
-a {
-    color: inherit;
-    cursor: pointer;
-}
-
-.btn-blue {
-    background-color: #1A237E;
-    width: 150px;
-    color: #fff;
-    border-radius: 2px;
-}
-
-.btn-blue:hover {
-    background-color: #000;
-    cursor: pointer;
-}
-*/
 .bg-blue {
     color: #fff;
     background-color: #1A237E;
