--- a/frontend-grading-assignment/src/App.css
+++ b/frontend-grading-assignment/src/App.css
@@ -11,3 +11,97 @@ body {
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Slab', serif;
 }
+
+
+#sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -15rem;
+    margin-top: 4rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+    background: darkblue !important;
+    position: fixed;
+    z-index: 9999;
+    }
+
+    #sidebar-wrapper .sidebar-heading {
+        padding: 0.875rem 1.25rem;
+        font-size: 1.2rem;
+    }
+
+    #sidebar-wrapper .list-group {
+      width: 15rem;
+    }
+
+    .list-group-item {
+        margin: 1rem 0;
+    }
+
+    #page-content-wrapper {
+      min-width: 100vw;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+    }
+
+    /* #wrapper.toggled .resize {
+        min-width: 100vw;
+    } */
+
+    .form{
+        position: relative;
+        left: 20%;
+    }
+    
+    .form .bi-search{
+        position: absolute;
+        top: 10px;
+        left: 15px;
+        color: #9ca3af;
+    
+    }
+    
+    .form span{
+        position: absolute;
+        right: 17px;
+        top: 13px;
+        padding: 2px;
+        border-left: 1px solid #d1d5db;
+    
+    }
+    
+    .left-pan{
+        padding-left: 7px;
+    }
+    
+    .left-pan i{  
+       padding-left: 10px;
+    }
+    
+    .form-input{
+        height: 39px;
+        text-indent: 33px;
+        border-radius: 10px;
+    }
+    
+    .form-input:focus{
+        box-shadow: none;
+        border:none;
+    }
+
+    @media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
+    }
+    #wrapper{background-color: lightblue;}
