--- a/frontend-grading-assignment/src/routes/CustomContact.css
+++ b/frontend-grading-assignment/src/routes/CustomContact.css
@@ -1,6 +1,7 @@
 .contact {
-    margin-top: 13rem;
+    margin-top: 5rem;
     box-shadow: 0px 4px 8px 0px #757575;
+    width: 100%;
 }
 
 .email img {
