Finished the home page

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,45 @@
   margin: auto;
 }
 
+#footer {
+  margin-top: 10px;
+}
+
+#exampleFormControlInput1 {
+  margin-bottom: 10px;
+}
+
+#inputPassword2 {
+  margin-bottom: 10px;
+}
+
+#homebodybackground {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#signuppagebg {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 250px;
+  background-color: #333;
+  color: #fff;
+  padding-top: 60px; /* Adjust to match your navbar height */
+}
+
+/* Add margin to the content to accommodate the fixed sidebar */
+.content {
+  margin-left: 250px; /* Adjust to match the sidebar width */
+  padding: 20px;
+}
+
+#submit-btn {
+  margin-bottom: 10px;
+}
