--- a/src/style.css
+++ b/src/style.css
@@ -2,19 +2,30 @@
     display:flex;
     align-items: center;
     margin-left:120px;
+    padding-left:0px;
 
 }
 a.nav-link{
-    margin-right: 50px;
-    
+    margin-right: 0;
+    margin-left: 40px;   
+}
+
+
+div.me-auto.navbar-nav{
+    margin-left:280px;
+}
+
+img.d-inline-block.align-top{
+    margin-right:0;
 }
 .login-container{
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: 200px;
-    background-color: #3b9494;
+    background-color: #cfd4d4;
     padding-bottom: 30px;
+
 }  
 
 .login-header{
@@ -33,19 +44,34 @@ a.nav-link{
     color:rgb(175, 183, 183);
     font-size: 28px;
     font-weight: 700px;
+    text-align: center;
     
+}
+
+.box{
+
 }
  
 .login-input1{
     margin-top: 25px;
-    gap: 5px;
-    margin-right:80px;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50px;
+    width:200px;
+    height: 40px;
+    background-color: beige;
+    border-radius: 6px;
+    border: none;
 }
 
 .login-input2{
     margin-top: 25px;
-    gap: 5px;
-    margin-right:30px;
+    align-items: center;
+    width: 200px;
+    height: 40px;
+    background-color: beige;
+    border-radius: 6px;
+    border: none;
 
 
 }
