Made the navbar responsive

--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
-
-.nav {
+nav {
   margin-top: -20px;
   position: fixed;
   display: flex;
@@ -77,4 +76,57 @@ li {
 .link:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+nav .menu {
+  display: none;
+  position: absolute;
+  top: 1.75rem;
+  right: 0.5rem;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 2.25rem;
+  height: 2rem;
+}
+nav .menu span {
+  height: 0.4rem;
+  width: 100%;
+  background-color: #0087ca;
+  border-radius: 0.2rem;
+}
+@media (max-width: 1000px) {
+  nav .menu {
+    display: flex;
+  }
+
+  .nav-list {
+    position: absolute;
+    top: 5.5rem;
+    width: 200px;
+    height: 300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+  }
+  .nav-list ul {
+    display: none;
+    border: 2px solid #0087ca;
+    border-radius: 10px;
+    background-color: #919fa6;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 2.5rem;
+    padding-left: 0px;
+  }
+  .nav-list ul li {
+    width: 100%;
+    text-align: center;
+  }
+  .nav-list .open{
+    display: flex;
+  }
+  .nav-list ul li .link {
+    color: white;
+  }
 }
