--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -8,6 +8,10 @@
   width: 100%;
   height: 800px;
 }
+.student-info h1 {
+  font-family: Roboto;
+  font-weight: bold;
+}
 .student-info {
   color: white;
   padding-left: 20px;
@@ -18,11 +22,14 @@
   border-radius: 5px;
 }
 span {
+  font-family: Roboto;
   font-weight: bold;
   text-decoration: underline;
 }
 p {
   font-size: 17px;
+  font-family: Roboto;
+  font-weight: bold;
 }
 
 .d-grades {
@@ -42,6 +49,8 @@ table {
 
 th,
 td {
+  font-family: Roboto;
+  font-weight: bold;
   border: 2px solid #ddd;
   padding: 8px;
   text-align: left;
@@ -51,6 +60,8 @@ th {
   background-color: rgb(30, 104, 188);
 }
 .sem {
+  font-family: Roboto;
+  font-weight: bold;
   margin-left: 17px;
   margin-bottom: -10px;
 }
