updated login page

--- a/public/landing/css/color-3.css
+++ b/public/landing/css/color-3.css
@@ -8,6 +8,10 @@
     color: #fff
 }
 
+.login-rounded{
+    border-radius: 30px;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     position: relative;
