--- a/report/src/App.css
+++ b/report/src/App.css
@@ -16,13 +16,17 @@ html {
   
   body {
     color: #ffffff;
-    background: linear-gradient(to bottom, #ee7724, #d8363a, #dd3675, #b44593);
+    background: black;
+    background-size: cover;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
     font: 16px/1.6 "Muli", sans-serif;
     min-width: 320px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-weight: 400;
-  }
+}
+
   
   img {
     max-width: 100%;
@@ -158,223 +162,8 @@ html {
     font-size: 15px;
   }
   
-  input[type=text],
-  input[type=email],
-  input[type=tel],
-  input[type=search],
-  textarea {
-    background: #fff;
-    border: 1px solid #cccccc;
-    margin: 0;
-    padding: 5px 15px;
-    width: 100%;
-    height: 47px;
-    color: gray;
-    font-size: 16px;
-    line-height: 20px;
-  }
   
-  input[type=text]::-webkit-input-placeholder,
-  input[type=email]::-webkit-input-placeholder,
-  input[type=tel]::-webkit-input-placeholder,
-  input[type=search]::-webkit-input-placeholder,
-  textarea::-webkit-input-placeholder {
-    color: gray;
-  }
   
-  input[type=text]::-moz-placeholder,
-  input[type=email]::-moz-placeholder,
-  input[type=tel]::-moz-placeholder,
-  input[type=search]::-moz-placeholder,
-  textarea::-moz-placeholder {
-    opacity: 1;
-    color: gray;
-  }
-  
-  input[type=text]:-moz-placeholder,
-  input[type=email]:-moz-placeholder,
-  input[type=tel]:-moz-placeholder,
-  input[type=search]:-moz-placeholder,
-  textarea:-moz-placeholder {
-    color: gray;
-  }
-  
-  input[type=text]:-ms-input-placeholder,
-  input[type=email]:-ms-input-placeholder,
-  input[type=tel]:-ms-input-placeholder,
-  input[type=search]:-ms-input-placeholder,
-  textarea:-ms-input-placeholder {
-    color: gray;
-  }
-  
-  input[type=text].placeholder,
-  input[type=email].placeholder,
-  input[type=tel].placeholder,
-  input[type=search].placeholder,
-  textarea.placeholder {
-    color: gray;
-  }
-  
-  input[type=text]:focus,
-  input[type=email]:focus,
-  input[type=tel]:focus,
-  input[type=search]:focus,
-  textarea:focus {
-    outline: none;
-  }
-  
-  .newsletter-block input[type=text],
-  .newsletter-block input[type=email],
-  .newsletter-block input[type=tel],
-  .newsletter-block input[type=search],
-  .newsletter-block textarea {
-    border: 0;
-  }
-  
-  textarea {
-    height: 150px !important;
-    min-height: 150px !important;
-    resize: vertical;
-    padding: 10px 15px !important;
-  }
-  
-  .title-holder {
-    text-align: center;
-    margin: 0 0 40px;
-  }
-  
-  .title-holder h2 {
-    margin: 0 0 5px;
-    text-transform: uppercase;
-  }
-  
-  .title-holder .subtitle {
-    color: #999999;
-  }
-  
-  .title-holder .subtitle:before {
-    content: '-';
-    margin: 0 5px 0 0;
-  }
-  
-  .title-holder .subtitle:after {
-    content: '-';
-    margin: 0 0 0 5px;
-  }
-  
-  .socials {
-    display: table;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .socials ul {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-  }
-  
-  .socials li {
-    display: inline-block;
-    vertical-align: top;
-    padding: 0 5px;
-  }
-  
-  .socials a {
-    width: 35px;
-    height: 35px;
-    background: #fff;
-    color: #f64b4b;
-    border-radius: 50%;
-    display: block;
-    text-align: center;
-    padding: 2px;
-    transition: background 0.3s linear, color 0.3s linear;
-    -webkit-transition: background 0.3s linear, color 0.3s linear;
-  }
-  
-  .socials a:hover {
-    background: #f64b4b;
-    color: #fff;
-  }
-  
-  .socials .fab {
-    line-height: 2;
-  }
-  
-  .go-top {
-    width: 50px;
-    height: 50px;
-    overflow: hidden;
-    text-indent: 101%;
-    white-space: nowrap;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: #f64b4b;
-    border-radius: 3px;
-    color: #fff;
-    border: 0;
-  }
-  
-  .go-top:before {
-    width: 13px;
-    height: 13px;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    content: '';
-    border-style: solid;
-    border-color: #fff;
-    border-width: 1px 1px 0 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -3px 0 0 -6px;
-  }
-  
-  .go-top:hover {
-    background: #f41a1a;
-  }
-  
-  .pagination>li.active a {
-    background: #f64b4b;
-    border-color: #f64b4b;
-  }
-  
-  .pagination>li.active a:hover {
-    background: #f64b4b;
-    border-color: #f64b4b;
-  }
-  
-  .pagination>li>a {
-    color: #f64b4b;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    padding: 6px 15px 12px;
-  }
-  
-  .pagination>li>a:hover {
-    background: #f64b4b;
-    color: #fff;
-    border-color: #f64b4b;
-  }
-  
-  .pagetitle {
-    margin: 80px 0 0;
-    background: #f64b4b;
-    color: #fff;
-    padding: 50px 0;
-  }
-  
-  .pagetitle .title-holder {
-    margin: 0;
-  }
-  
-  .pagetitle .subtitle {
-    color: #e6e6e6;
-  }
   
   
   #footer {
@@ -557,330 +346,6 @@ html {
     padding: 8px 15px 10px;
   }
   
-  .teams-block div[class*="col"] {
-    margin: 0 0 50px;
-  }
-  
-  .teams-block .row:last-child {
-    margin: 0 -15px;
-  }
-  
-  .teams-block [class*="col-"]:hover .overlay {
-    top: 0;
-    opacity: 1;
-  }
-  
-  .teams-block .image {
-    margin: 0 0 20px;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .teams-block .image img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .teams-block .image .overlay {
-    position: absolute;
-    top: 50%;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.2s linear;
-    vertical-align: middle;
-    background: rgba(246, 75, 75, 0.9);
-    opacity: 0;
-  }
-  
-  .teams-block h3 {
-    margin: 0 0 5px;
-  }
-  
-  .teams-block .designation {
-    display: block;
-    font-style: italic;
-    margin: 0 0 20px;
-  }
-  
-  .testimonials-block {
-    padding: 90px 0 70px;
-    background-position: 50% 0;
-    background-size: cover;
-    background-attachment: fixed;
-    background-image: url('assets/images/bg-testimonial.jpg');
-    position: relative;
-    color: #fff;
-  }
-  
-  .testimonials-block:before {
-    content: '';
-    background: rgba(0, 0, 0, 0.8);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .testimonials-block .container-fluid {
-    position: relative;
-    z-index: 1;
-    margin: 0 auto;
-    max-width: 900px;
-  }
-  
-  .testimonials-block .subtitle {
-    color: #cccccc;
-  }
-  
-  .testimonials-block blockquote {
-    border: 0;
-    text-align: center;
-    margin: 0;
-    padding: 0 0 10%;
-  }
-  
-  .testimonials-block cite {
-    font-style: normal;
-    padding: 15px 0 0;
-    display: block;
-  }
-  
-  .testimonials-block cite span {
-    display: block;
-  }
-  
-  .testimonials-block .name {
-    margin: 0;
-    text-transform: uppercase;
-  }
-  
-  .testimonials-block .name:before {
-    content: '-';
-    margin: 0 5px 0 0;
-  }
-  
-  .testimonials-block .designation {
-    font-size: 14px;
-  }
-  
-  .testimonials-block .carousel-indicators button {
-    border: 0;
-  }
-  
-  .testimonials-block .carousel-indicators .active {
-    background: #f64b4b;
-  }
-  
-  .pricing-block .row {
-    align-items: center;
-    margin: 0;
-  }
-  
-  .pricing-block .row>div {
-    text-align: center;
-    padding: 0;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .pricing-block .heading {
-    background: #e6e6e6;
-    padding: 15px 60px;
-  }
-  
-  .pricing-block .content .list-group-item {
-    padding: 10px 20px;
-    border: 0;
-    background: #f7f7f7;
-  }
-  
-  .pricing-block .content .list-group-item:nth-child(2n-1) {
-    background: #ededed;
-  }
-  
-  .pricing-block .btn-holder {
-    padding: 30px 20px;
-  }
-  
-  .pricing-block div[class*="col"]:nth-child(2) {
-    box-shadow: 0 0 40px 5px #e0e0e0;
-    position: relative;
-  }
-  
-  .pricing-block div[class*="col"]:nth-child(2) .heading {
-    padding: 30px 20px;
-    background: #f64b4b;
-    color: #fff;
-  }
-  
-  .pricing-block div[class*="col"]:nth-child(2):before {
-    content: 'Popular';
-    text-transform: uppercase;
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    background: #f76363;
-    color: #fff;
-    padding: 5px 10px;
-    transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-    -webkit-transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-    font-size: 12px;
-    text-transform: uppercase;
-    width: 150px;
-  }
-  
-  .pricing-block h3 {
-    text-transform: uppercase;
-    margin: 0;
-  }
-  
-  .pricing-block .price {
-    font-size: 35px;
-    line-height: 45px;
-  }
-  
-  .blog-block {
-    background: #f2f2f2;
-  }
-  
-  .blog-block.content-block .holder:hover {
-    box-shadow: none;
-  }
-  
-  .blog-block.content-block .holder:hover .image img {
-    transform: none;
-  }
-  
-  .blog-block.content-block .comment-block ul {
-    margin: 0;
-  }
-  
-  .blog-block.content-block .comment-block li {
-    padding: 0;
-  }
-  
-  .blog-block.content-block .comment-block li:before {
-    display: none;
-  }
-  
-  .blog-block .row {
-    margin-bottom: 50px;
-  }
-  
-  .blog-block .row:last-child {
-    margin-bottom: 0;
-  }
-  
-  .blog-block .holder {
-    background: #fff;
-    padding: 15px;
-    transition: box-shadow 0.3s linear;
-  }
-  
-  .blog-block .holder:hover {
-    box-shadow: 0 0 30px 0 #d9d9d9;
-  }
-  
-  .blog-block .card {
-    border: 0;
-  }
-  
-  .blog-block .card-body {
-    padding: 0;
-  }
-  
-  .blog-block img {
-    margin: 0 0 15px;
-  }
-  
-  .blog-block time {
-    display: block;
-    margin: 0 0 10px;
-  }
-  
-  .blog-block .card-title {
-    margin: 0 0 10px;
-    color: #f64b4b;
-    font-size: 22px;
-  }
-  
-  .blog-block .card-title a:hover {
-    color: #d10a0a;
-  }
-  
-  .blog-block .meta {
-    overflow: hidden;
-    margin: 0 0 10px;
-  }
-  
-  .blog-block .meta time {
-    float: left;
-    padding: 0 10px 0 0;
-  }
-  
-  .blog-block .meta .category {
-    float: right;
-    padding: 0 0 0 10px;
-  }
-  
-  .blog-block .meta .category a {
-    color: #333;
-  }
-  
-  .blog-block .meta .category a:hover {
-    color: #f64b4b;
-  }
-  
-  .contact-block {
-    position: relative;
-  }
-  
-  .contact-block .row {
-    margin: 0 0 25px;
-  }
-  
-  .contact-block .btn-holder {
-    text-align: center;
-  }
-  
-  .contact-block .contact-form {
-    margin: 0 0 60px;
-  }
-  
-  .contact-block iframe {
-    border: 0;
-    width: 100%;
-    height: 450px;
-  }
-  
-  .contact-block .contact-info {
-    padding: 70px 40px 0;
-    position: relative;
-    z-index: 1;
-    font-size: 18px;
-    border-radius: 5px;
-  }
-  
-  .contact-block .contact-info ul {
-    text-align: center;
-  }
-  
-  .contact-block .contact-info li {
-    display: inline-block;
-    vertical-align: top;
-    width: 32%;
-  }
-  
-  .contact-block .contact-info .fas {
-    display: block;
-    font-size: 40px;
-    margin: 0 0 15px;
-    color: #f64b4b;
-  }
-  
   @media only screen and (min-width: 1025px) {
   
     a[href^=tel],
@@ -967,15 +432,7 @@ html {
       margin: 0 0 20px;
     }
   
-    .go-top {
-      width: 40px;
-      height: 40px;
-    }
-  
-    .go-top:before {
-      width: 11px;
-      height: 11px;
-    }
+    
   
     .pagetitle {
       padding: 30px 0;
