--- a/src/pages/Homepage/css/index.css
+++ b/src/pages/Homepage/css/index.css
@@ -30,11 +30,13 @@
 
 .navigation{
     float: right;
+    cursor: pointer;
     height: 100%;
     color:white;
     font-weight: 800;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .navigation a{
     float: left;
     height: 100%;
@@ -112,6 +114,7 @@
     width: 100%;
     height: 100vh;
      background-color:white; 
+     font-weight: 600;
     padding: 0 15%;
     display: flex;
     align-items: center;
@@ -168,6 +171,7 @@
     padding: 8px;
     margin-bottom: 12px;
     box-sizing: border-box;
+    border-color: #846ff7;
   }
   
   .login-form button {
