Added dashboard and instructor contact pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/*Calendar Css*/
+@import url("https://cdn.syncfusion.com/ej2/material.css");
+
+/* Landing Page Styling */
 .wrapper{
     background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.7)), url('./images/bg.jpg');
     height: 100vh;
@@ -36,4 +40,38 @@
     color: white;
     font-weight: 600;
     padding-bottom: 15px;
+}
+
+/* Dashboard Styling */
+
+.AppHeader{
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 20px 4px 12px;
+    border-bottom: 1px solid rgba(0,0,0,.5);
+}
+
+.AppFooter{
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-top: 1px solid rgba(0,0,0,.15);
+}
+
+.SideMenuAndPageContent{
+    display: flex;
+    flex-direction: row;
+    height: calc(100vh - 100px);
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.SideMenu{}
+
+.PageContent{
+    padding: 12px;
+    font-weight: bold;
 }
