I just learnt about tailwind css and I am using it to design my pages. But as at now, I have used it to do my landing and login page, but I hope to continue with the rest of the other pages

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 
 .footer-container {
-    background-color: rgb(61, 119, 169);
+    background-color: rgb(79, 161, 189);
     padding: 20px 0;
     color: #000000;
   }
@@ -18,12 +18,14 @@
   
   .footer-section h3 {
     color: #d9534f;
+    display: block;
   }
   
   .footer-section ul {
     color: #000;
     list-style: none;
     padding: 0;
+    display: block;
   }
   
   .footer-section ul li {
