--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:  #007bff;
+    background-color:  rgb(0, 177, 193);
     padding: 10px 20px;
   }
   
@@ -45,7 +45,7 @@
   
   .navbar-logout a {
     text-decoration: none;
-    background-color: red;
+    background-color: cadetblue;
     color: #110f0f; 
     font-weight: bold;
     font-size: 16px;
