--- a/frontend-grading-assignment/src/App.css
+++ b/frontend-grading-assignment/src/App.css
@@ -1,107 +1,128 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 
-* {
-    margin: 0;
-    padding: 0;
+
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*,
+::after,
+::before {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    /* background-image: url("https://codzsword.github.io/bootstrap-sidebar/background-image.jpg"); */
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: cover;
 }
 
+h3 {
+    font-size: 1.2375rem;
+    color: #FFF;
+}
 
-#sidebar-wrapper {
+a {
+    cursor: pointer;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+}
+
+li {
+    list-style: none;
+}
+
+/* Layout skeleton */
+
+.wrapper {
+    align-items: stretch;
+    display: flex;
+    width: 100%;
+}
+
+#sidebar {
+    max-width: 260px;
+    min-width: 260px;
+    transition: all 0.35s ease-in-out;
+    box-shadow: 0 0 35px 0 rgba(49, 57, 66, 0.5);
+    z-index: 1111;
+    /* position: fixed; */
+    /* min-height: 100vh;
+    max-height: 100vh; */
+
+}
+
+/* Sidebar collapse */
+
+#sidebar.collapsed {
+    margin-left: -264px;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
-    margin-left: -15rem;
-    margin-top: 4rem;
-    -webkit-transition: margin .25s ease-out;
-    -moz-transition: margin .25s ease-out;
-    -o-transition: margin .25s ease-out;
-    transition: margin .25s ease-out;
-    background: darkblue !important;
-    position: fixed;
-    z-index: 9999;
-    }
+    width: 100%;
+    overflow: hidden;
+    transition: all 0.35s ease-in-out;
+}
 
-    #sidebar-wrapper .sidebar-heading {
-        padding: 0.875rem 1.25rem;
-        font-size: 1.2rem;
-    }
+.sidebar-logo {
+    padding: 1.15rem 1.5rem;
+}
 
-    #sidebar-wrapper .list-group {
-      width: 15rem;
-    }
+.sidebar-logo a {
+    color: #e9ecef;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
 
-    .list-group-item {
-        margin: 1rem 0;
-    }
+.sidebar-nav {
+    padding: 0;
+}
 
-    #page-content-wrapper {
-      min-width: 100vw;
-    }
+.sidebar-header {
+    color: #e9ecef;
+    font-size: .75rem;
+    padding: 1.5rem 1.5rem .375rem;
+}
 
-    #wrapper.toggled #sidebar-wrapper {
-    margin-left: 0;
-    }
+a.sidebar-link {
+    padding: .625rem 1.625rem;
+    color: #e9ecef;
+    position: relative;
+    display: block;
+    font-size: 1rem;
+}
 
-    /* #wrapper.toggled .resize {
-        min-width: 100vw;
-    } */
+.sidebar-link[data-bs-toggle="collapse"]::after {
+    border: solid;
+    border-width: 0 .075rem .075rem 0;
+    content: "";
+    display: inline-block;
+    padding: 2px;
+    position: absolute;
+    right: 1.5rem;
+    top: 1.4rem;
+    transform: rotate(-135deg);
+    transition: all .2s ease-out;
+}
 
-    .form{
-        position: relative;
-        left: 20%;
-    }
-    
-    .form .bi-search{
-        position: absolute;
-        top: 10px;
-        left: 15px;
-        color: #9ca3af;
-    
-    }
-    
-    .form span{
-        position: absolute;
-        right: 17px;
-        top: 13px;
-        padding: 2px;
-        border-left: 1px solid #d1d5db;
-    
-    }
-    
-    .left-pan{
-        padding-left: 7px;
-    }
-    
-    .left-pan i{  
-       padding-left: 10px;
-    }
-    
-    .form-input{
-        height: 39px;
-        text-indent: 33px;
-        border-radius: 10px;
-    }
-    
-    .form-input:focus{
-        box-shadow: none;
-        border:none;
-    }
+.sidebar-link[data-bs-toggle="collapse"].collapsed::after {
+    transform: rotate(45deg);
+    transition: all .2s ease-out;
+}
 
-    @media (min-width: 768px) {
-    #sidebar-wrapper {
-        margin-left: 0;
+.content {
+    flex: 1;
+    max-width: 100vw;
+    width: 100vw;
+}
+
+/* Responsive */
+
+@media (min-width:768px) {
+    .content {
+        width: auto;
     }
-    #page-content-wrapper {
-        min-width: 0;
-        width: 100%;
-    }
-    #wrapper.toggled #sidebar-wrapper {
-        margin-left: -15rem;
-    }
-    }
-    #wrapper{background-color: lightblue;}
+}
