--- a/frontend-grading-assignment/src/App.css
+++ b/frontend-grading-assignment/src/App.css
@@ -1,6 +1,7 @@
 
 
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+    @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 
 *,
 ::after,
@@ -121,7 +122,7 @@ a.sidebar-link {
 
 /* Responsive */
 
-@media (min-width:768px) {
+@media (min-width:808px) {
     .content {
         width: auto;
     }
