--- a/my-project/src/components/components-css/login.css
+++ b/my-project/src/components/components-css/login.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: linear-gradient(#d5a3ff 0%, #77a5f8 100%);
+  background-image: url(11263472_DCIT205_Assignment1/my-project/src/components/components-images/login.gif);
   position: relative;
   flex-direction: column;
 }
