--- a/grading-website/src/components/HeroSection.css
+++ b/grading-website/src/components/HeroSection.css
@@ -328,3 +328,25 @@
     transform: scale(1);
   }
 }
+
+.page-content-container{
+  position: relative;
+  margin-top: 80px;
+  margin-left:500px;
+  border:2px solid black;
+  background-color: #eee;
+  width: 700px;
+  height: 700px;
+}
+.page-header-box{
+  position: absolute;
+  left:-600px;
+  width:500px;
+  margin-left: 700px;
+  display:flex;
+  justify-content: center;
+}
+.page-header-box h2{
+ color:black;
+ font-size:40px;
+}
