--- a/grading-website/src/components/LeftSidebar.css
+++ b/grading-website/src/components/LeftSidebar.css
@@ -3,7 +3,7 @@
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color:black;
+    background-color: rgb(0, 0, 0);
     position:fixed;
     left:0px;
     bottom:0px;
@@ -12,6 +12,7 @@
 
   .nav-link-container{
     position:relative;
+    background-color: transparent;
     height: 150px;
     margin-top:10px;
     margin-bottom: 10px;
