--- a/grading-website/src/components/Footer.css
+++ b/grading-website/src/components/Footer.css
@@ -2,13 +2,14 @@
   position: relative;
   display:flex;
   flex-direction: row;
- width:1300px;
+  justify-content: center;
+  align-items: center;
  height: 450px;
- margin-left: 160px;
  background-color:rgb(33, 33, 33);
- top:1500px;
+ top:2000px;
  bottom:0px;
  right:0px;
+ left:0px;
  border:1px solid;
  border-color:white;
 }
@@ -17,7 +18,7 @@
 display:flex;
 flex-direction: column;
 position: absolute;
-left:50px;
+left:100px;
 top:10px;
 }
 .quick-links-container h4,
@@ -43,7 +44,7 @@ top:10px;
   display:flex;
 flex-direction: column;
 position: absolute;
-left:400px;
+left:600px;
 top:10px;
 }
 .contact-container,
@@ -88,7 +89,7 @@ top:10px;
 .social-media-container{
   position: absolute;
   top:10px;
-  left:850px;
+  left:1200px;
   display:flex;
   flex-direction: column;
 }
