--- a/grading-website/src/components/HeroSection.css
+++ b/grading-website/src/components/HeroSection.css
@@ -58,18 +58,13 @@
   }
   .card-container{
     position: absolute;
-    left:250px;
-    top:400px;
+    left:100px;
+    top:600px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 10px;
-    
   }
-  .card-item{
-    position: absolute;
-    left:400px;
-    top:720px;
-  }
+  
   .student-login-details{
     position:fixed;
    display: flex;
@@ -332,11 +327,11 @@
 .page-content-container{
   position: relative;
   margin-top: 80px;
-  margin-left:500px;
+  margin-left:400px;
   border:2px solid black;
   background-color: #eee;
-  width: 700px;
-  height: 700px;
+  width: 800px;
+  height: 3000px;
 }
 .page-header-box{
   position: absolute;
@@ -349,4 +344,30 @@
 .page-header-box h2{
  color:black;
  font-size:40px;
+}
+.instructors-box{
+  position: absolute;
+  top:60px;
+  left: 20px;
+ display:grid;
+ column-gap: 20px;
+ row-gap: 20px;
+ grid-template-columns: 300px 300px;
+}
+.image-box{
+  width:300px;
+  height:300px;
+  border: 1px solid black;
+}
+.image-box img{
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+}
+.instructor-details{
+  width:300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
