--- a/grading-website/src/components/Navbar.css
+++ b/grading-website/src/components/Navbar.css
@@ -8,14 +8,16 @@ z-index:100;
 .navbar-container{
   background-color: rgb(44, 42, 42);
   position:fixed;
-  width:1500px;
+  width:1600px;
 height:50px;
 }
 .tabs-container{
 position:absolute;
-left:900px;
+left:500px;
 top:0px;
 display: flex;
+width:1500px;
+align-items: center;
 }
 
 .nav-link{
