--- a/src/App.css
+++ b/src/App.css
@@ -1,105 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+body{
+  background-image: url(background.jpg)
 }
-
-body {
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 30px;
-  background: url('./background.jpg') center / cover no-repeat fixed;  
-}
-
-h1 {
+.App {
   text-align: center;
 }
 
-:root {
-  font-size: 20px;
-  box-sizing: inherit;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-p {
-  margin: 0;
-  font-size: 0.95em;
-}
-
-p:not(:last-child) {
-  margin-bottom: 1.5em;
-}
-
-.card {
-  max-width: 500px;
-  height: 300px;
-  padding: 35px;
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.45);
-  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(15px);
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.card-footer {
-  font-size: 0.95em;
-  color: #446;
+.App-link {
+  color: #61dafb;
 }
 
-/* App.css */
-
-/* Existing styles... */
-
-.login-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 10px 15px;
-  font-size: 16px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.login-button:hover {
-  background-color: #0056b3;
-}
-
-.dashboard-button {
-  position: absolute;
-  top: 10px;
-  right: 80px; /* Adjust the right value to create space between the buttons */
-  padding: 10px 15px;
-  font-size: 16px;
-  background-color: #28a745; /* Example background color for the dashboard button */
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.dashboard-button:hover {
-  background-color: #218838; /* Example hover color for the dashboard button */
-}
-
-  .gytr {
-    color: green;
-    font-size: 0.98em;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  
+  to {
+    transform: rotate(360deg);
+  }
+}
