--- a/dcit205/src/components/contact.css
+++ b/dcit205/src/components/contact.css
@@ -1,12 +1,9 @@
-* {
+.bodyy {
+    background-color: #f5f5f5;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-body {
-    background-color: #f5f5f5;
 }
 
 .row {
@@ -14,6 +11,7 @@ body {
     flex-wrap: wrap;
     padding: 2em 1em;
     text-align: center;
+    
 }
 
 .column {
@@ -21,7 +19,7 @@ body {
     padding: 0.5em 0;
 }
 
-h1 {
+.row h1 {
     width: 100%;
     text-align: center;
     font-size: 3.5em;
@@ -84,6 +82,12 @@ h1 {
 
 .card:hover .img-container {
     transform: scale(1.15);
+}
+
+footer {
+    background-color: rgb(74, 89, 112);;
+    color: white;
+    padding: 10px 0;
 }
 
 @media screen and (min-width: 768px) {
