--- a/src/App.css
+++ b/src/App.css
@@ -17,83 +17,34 @@
 }
 
 #homebodybackground {
+  margin-top: 70px;
   padding-top: 30px;
   padding-bottom: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #signuppagebg {
+  margin-top: 70px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.sidenav {
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #333;
-  padding-top: 20px;
-}
-
-/* Style for the links in the side navigation bar */
-/*.sidenav a {
-  margin-top: 2px;
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 18px;
-  color: #818181;
-  display: block;
-}*/
-
-/* Change the color of the links on hover */
-/*.sidenav a:hover {
-  color: #f1f1f1;
-}*/
 #submit-btn {
   margin-bottom: 10px;
 }
 
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #333;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+.nav-pills li a:hover {
+  background-color: blue;
 }
 
-/* Style for the links in the side navigation bar */
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 18px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+#sidebarDiv {
+  margin-left: 0;
+  z-index: 1;
 }
 
-/* Change the color of the links on hover */
-.sidenav a:hover {
-  color: #f1f1f1;
+#alert {
+  width: 50%;
+  z-index: 2;
+  display: flex;
+  justify-content: right;
 }
-
-/* Style for the toggle button */
-.toggle-btn {
-  font-size: 20px;
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 15px;
-}
-
-/* Style for the main content area */
-.main {
-  transition: margin-left 0.5s;
-  padding: 16px;
-}
-
 
