made some changes

--- a/assignment_work/src/Components/homepage/homepage.css
+++ b/assignment_work/src/Components/homepage/homepage.css
@@ -31,3 +31,24 @@
     text-align: center;
     margin-top: 200px;
   }
+
+.nav-login{
+    display: flex;
+    align-items: center;
+    gap: 45px;
+}
+.nav-login button{
+    width: 157px;
+    height: 58px;
+    outline: none;
+    border: 1px solid #7a7a7a;
+    border-radius: 75px;
+    color: #515151;
+    font-size: 20px;
+    font-weight: 500;
+    background: white;
+    cursor: pointer;
+}
+.nav-login button:active{
+    background: #f3f3f3;
+}
