--- a/react-app/src/Components/login.css
+++ b/react-app/src/Components/login.css
@@ -1,11 +1,16 @@
-.container{
+.container {
   display: flex;
   flex-direction: column;
-  margin-top: 200px;
+  align-items: center; 
+  justify-content: center; 
+  min-height: 100vh; 
   background: #fff;
   width: 600px;
+  max-width: 90%; 
   padding-bottom: 30px;
+  margin: 0 auto; 
 }
+
 .header{
   display:flex;
   flex-direction: column;
